--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "private": true,
-  "packageManager": "pnpm@6.32.3",
   "scripts": {
-    "dev": "vite --host --open",
-    "build": "jszip-cli -c jszip.config.json",
-    "preview": "vite preview"
+    "dev-mini": "vite --port 3000",
+    "dev": "concurrently \"npm run dev-mini\" \"webxdc-dev run http://localhost:3000\"",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "build": "vite build"
   },
   "devDependencies": {
-    "@ffflorian/jszip-cli": "^3.1.6",
-    "eruda": "^2.4.1",
-    "vite": "^2.9.9"
+    "@vitejs/plugin-legacy": "^4.0.2",
+    "concurrently": "^8.1.0",
+    "eruda": "^3.0.0",
+    "prettier": "^3.0.3",
+    "toml": "^3.0.0",
+    "vite": "^4.3.2",
+    "vite-plugin-zip-pack": "^1.0.5",
+    "webxdc-dev": "^0.17.0"
+  },
+  "dependencies": {
+    "webxdc-scores": "github:webxdc/webxdc-scores"
   }
 }
